      of the top-level Get Software view (LP: #628404) 
  
  [ Michael Vogt ]
  * merged lp:~aaronp/software-center/usc-605048:
    Alters db update behaviour to stop 'rebuilding' window appearing while
    xapian db is being updated on detecting an externally changed cache.
    Instead, updates a new copy of the xapian db, then once finished,
    renamed to be the new xapian db.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Dec 2010 11:50:36 +0100

software-center (3.1.8) natty; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/restfulclient.py:
    - honor UBUNTU_SSO_SERVICE
  * softwarecenter/plugin.py:
    - ignore plugin init failures
  * softwarecenter/view/appdetailsview_gtk.py:
    - add helper to obtain xy position of the appicon in the view

  [ Gary Lasker ]
  * softwarecenter/view/appview.py:
    - fix crash in refresh_apps if previous model did
      not have a filter (LP: #690706)
  * softwarecenter/models/appstore.py:
    - enable threaded listviews 
  * <many>:
    - implement inline purchase flow (LP: #618817, LP: #625418) 

  [ Kiwinote ]
  * softwarecenter/view/appview.py:
    - fix crash when switching from a specific channel in the available pane
      to the same channel in the installed pane
  * softwarecenter/view/historypane.py:
    - use named arguments for history entries - thanks to dpm (LP: #690283)
  * softwarecenter/view/pendingview.py:
    - use a scrollbar when we have many transactions (LP: #642299)
    - display progress for transactions
  * po/POTFILES.in:
    - mark softwarecenter/models/viewswitcherlist.py for translation
  * data/ui/dialogs.py:
    - don't mark " " strings as translatable (LP: #691082)
  * debian/control:
    - use correct Vcs-Bzr url (LP: #690906)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 21 Dec 2010 16:09:37 +0100

software-center (3.1.7) natty; urgency=low

  [ Michael Vogt ]
  * refactor "SoftwarePane.refresh_apps()" code, this ensures